--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   "author": "Mehir",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.1.3",
     "express": "^4.18.2",
+    "express-handlebars": "^7.0.7",
     "express-waf-middleware": "0.0.4",
+    "mongodb": "^5.5.0",
+    "mongoose": "^7.2.2",
     "nodemon": "^2.0.22"
   }
 }
