--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-waf-middleware": "0.0.4",
     "mongodb": "^5.5.0",
     "mongoose": "^7.2.2",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "sanitize-html": "^2.10.0"
   }
 }
